--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "babel-loader": "^8.1.0",
@@ -23,6 +24,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
     "react-hot-loader": "^4.13.0",
     "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.6.0",
@@ -33,8 +36,16 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.12.1",
+    "@types/node-sass": "^4.11.1",
+    "css-loader": "^5.0.0",
+    "css-modules-typescript-loader": "^4.0.1",
+    "mini-css-extract-plugin": "^1.1.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "sass-loader": "^10.0.3",
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
   }
 }
