--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^5.0.0",
     "css-modules-typescript-loader": "^4.0.1",
     "mini-css-extract-plugin": "^1.1.1",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
