--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@babel/runtime-corejs3": "^7.12.1",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -20,6 +21,8 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "core-js": "^3.6.5",
     "eslint": "^7.11.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
