--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,9 @@
     "strict": true,
     "moduleResolution": "node",
     "baseUrl": "./src",
-    "typeRoots": ["node_modules/@types", "/index.d.tsx"],
+    "typeRoots": ["node_modules/@types"],
     "esModuleInterop": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*",  "/index.d.tsx",  "/styles.d.tsx"],
   "exclude": ["node_modules"]
 }
