--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.12.1",
     "@types/node-sass": "^4.11.1",
+    "@types/socket.io-client": "^1.4.34",
     "css-loader": "^5.0.0",
     "css-modules-typescript-loader": "^4.0.1",
     "mini-css-extract-plugin": "^1.1.1",
@@ -47,7 +48,9 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "regenerator-runtime": "^0.13.7",
     "sass-loader": "^10.0.3",
+    "socket.io-client": "^2.3.1",
     "style-loader": "^2.0.0",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
